<resources>
    <string name="app_name">Exploritage</string>
    <string name="city_name">Delhi</string>
    <string name="guide"> Audio Guide</string>
    <string name="history">History</string>
    <string name="location">Map</string>
    <string name="short_description"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="title_guide_des">Short Description</string>
    <string name="about">About</string>
    <string name="sites">Site</string>
    <string name="thingstodo">Things To Do</string>
    <string name="how_to_reach">How To Reach</string>
    <string name="no_response">No Response</string>
    <string name="available_city_guides">Available City Guides</string>
    <string name="places">Places</string>
    <!--<string name="welcome_to_exploritage">Welcome to Exploritage</string>-->
    <string name="home">Home</string>
    <string name="feedback">Feedback</string>
    <string name="shareapp">ShareApp</string>
    <string name="audio_guide">Audio Guide</string>
    <string name="about_place">About</string>
    <string name="welcome_text">Welcome, Voice of Heritage can take you around below heritage monuments</string>
    <string name="how_to_use">How To Use</string>
    <string name="heritage_personal_guide">Your Personal Heritage guide</string>
    <string name="no_sitemap_available">No SiteMap available</string>
    <string name="loading_site_map">Loading site map</string>
    <string name="welcome_to_enchanting">Welcome to enchanting</string>
    <string name="below_attractions">Below are the attractions that you can explore</string>
    <string name="about_exploritage">About Us</string>
    <string name="helvetica_font">helvetica_normal.ttf</string>
    <string name="site_map">Map</string>
    <string name="about_title">ABOUT</string>
    <string name="subtitle_pesonal_guide">YOUR PERSONAL HERITAGE GUIDE</string>

    <string name="exploritage_destinations">Exploritage Destinations</string>
    <string name="login_here">Login Here</string>
    <string name="already_a_member">Already A Member?</string>
    <string name="sign_me_up">Sign Me Up</string>
    <string name="register">Register</string>
    <string name="or">Or</string>
    <string name="create_new_account">Create a New Account</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="want_to_download">Want to Download?</string>
    <string name="hear_the_audio_at_your_own_pace_just_download_the_audio_for_uninterrupted_and_offline_usage">Hear the audio at your own pace, just download\nthe audio for uninterrupted and offline usage</string>
    <string name="buy">Buy</string>
    <string name="you_could_also_choose_from_our_following_packages">You could also choose from\n our following packages</string>
    <string name="package_2_rs_888">Package 2 Rs 888\nDescription</string>
    <string name="package_1_rs_888">Package 1 Rs 888\nDescription</string>
    <string name="package_3_rs_888_n_description">Package 3 Rs. 888 Description</string>
    <string name="package_4_rs_888_ndescription">Package 4 Rs. 888 Description</string>
    <string name="you_chose_hampi">You chose Hampi</string>
    <string name="brief_note_on_the_pack_details">Brief note on the pack details</string>
    <string name="price_rs_88888888">Price: Rs. 88888888</string>
    <string name="final_price_rs_88888888">Final Price: Rs. 88888888</string>
    <string name="delete_download">Delete Download?</string>
    <string name="are_you_sure_you_want_to_ndelete_the_downloads">Are you sure you want to\ndelete the downloads?</string>
    <string name="ok">Ok</string>
    <string name="standard_popup_name">Standard Popup Name</string>
    <string name="body_text_information_nbody_text_information_nbody_text_information_nbody_text_information_nbody_text_information">Body Text information,\nBody Text information\nBody Text information\nBody Text information\nBody Text information</string>
    <string name="button">Button</string>
    <string name="package_1_name">Package 1 Name</string>
    <string name="email">Email</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cc">CC</string>
    <string name="remember_me">Remember me</string>

    <string name="message">Message</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="hangouts">Hangouts</string>
    <string name="google">Google+</string>
    <string name="gmail">Gmail</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="welcome_user_name">Welcome User Name</string>
    <string name="my_audio_downloads">My Audio Downloads</string>
    <string name="packages">Packages</string>
    <string name="my_audio_guide">My Audio Guide</string>
    <string name="what_s_new">What\'s New</string>
    <string name="faq_s">FAQ\'s</string>
    <string name="rate_us">Rate Us</string>
    <string name="quality_of_content">Quality of Content</string>
    <string name="quality_of_narration">Quality of narration</string>
    <string name="ease_of_use">Ease of use</string>
    <string name="send">Send</string>
    <string name="frequently_asked_question_1">Frequently Asked Question 1?</string>

    <string name="promo_code">Promo Code</string>
    <string name="ad_unit_id">ca-app-pub-5965087743289837/7209194191</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>

    <string name="hello_world">Hello world!</string>
    <string name="are_you_planning_a_group_tour_nsee_our_packages_to_help_the_whole_group">Are you planning a Group Tour?\nSee ourpackages to help the whole group</string>
    <string name="single_person_nrs_100">Single Person\nRs 100</string>
    <string name="team_of_5_nrs_150">Team of 5\nRs 150</string>
    <string name="group_of_10_nrs_250">Group of 10\nRs 250</string>
    <string name="pack_for_nrs_180">Pack for\nRs 180</string>

    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->


    <string name="phone_number">PHONE NUMBER</string>
    <string name="name">NAME</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="rs_250">Rs 250</string>
    <string name="group_of_10">Group of 10</string>
    <string name="rs_150">Rs 150</string>
    <string name="team_of_5">Team of 5</string>
    <string name="rs_120">Rs 120</string>
    <string name="pack_for_2">Pack for 2</string>
    <string name="rs_100">Rs 100</string>
    <string name="single_person">Single Person</string>
    <string name="error_password_match">Password does not match</string>
    <string name="error_empty_password">Please Enter the password</string>
    <string name="error_invalid_phone_number">Please Enter valid phone number</string>
    <string name="error_empty_name">Please Enter the name</string>
    <string name="error_empty_phone_number">Mobile Number is empty</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="title_activity_main3">Main3Activity</string>
    <!-- -
        This is an ad unit ID for a banner test ad. Replace with your own banner ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="facebook_app_id">1387197151398508</string>
    <string name="pay_rs_8888">Pay Rs. 8888</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="my_destinations">My Destinations</string>
    <string name="delete_destination_successfully">Destination delete successfully</string>
    <string name="delete_city_successfully">City Delete Successfully</string>

</resources>
