<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="396dp"
    android:orientation="vertical"
    android:padding="14dp">

    <LinearLayout
        android:id="@+id/ll_dialog_full_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_border_white_dialog"
        android:orientation="vertical"
        android:padding="2dp">

        <LinearLayout
            android:id="@+id/ll_dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <simplifii.framework.widgets.CustomFontButton
                android:textColor="@color/boundary_orange"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_button_rectangle_round_corners"
                android:text="@string/package_1_name" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_dialog_body"
            style="@style/ll_bg_white"
            android:layout_marginBottom="30dp"
            android:background="@color/dark_gray"
            android:orientation="vertical">

            <simplifii.framework.widgets.CustomFontEditText
                style="@style/et_dialog_package"
                android:layout_marginTop="10dp"
                android:textStyle="italic"
                android:backgroundTint="@color/white"
                android:hint="@string/promo_code"

                />

            <simplifii.framework.widgets.CustomFontEditText
                style="@style/et_dialog_package"

                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <simplifii.framework.widgets.CustomFontEditText
                style="@style/et_dialog_package"
                android:backgroundTint="@color/white"
                android:hint="@string/card_number"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <simplifii.framework.widgets.CustomFontEditText
                    style="@style/et_dialog_package"
                    android:layout_weight="5"
                    android:backgroundTint="@color/white"
                    android:hint="@string/mm_yy"
                    android:inputType="date" />

                <simplifii.framework.widgets.CustomFontEditText
                    style="@style/et_dialog_package"
                    android:layout_weight="5"
                    android:backgroundTint="@color/white"
                    android:hint="@string/cc"
                    android:inputType="number" />

            </LinearLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:backgroundTint="@color/white"
                android:layout_margin="@dimen/margin_8dp"
                android:text="@string/remember_me" />

        </LinearLayout>
    </LinearLayout>

    <simplifii.framework.widgets.CustomFontButton
        style="@style/btn_style"
        android:background="@mipmap/wireframes_final_31"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="6dp"
        android:textColor="@color/black"
        android:text="@string/pay_rs_8888" />

</RelativeLayout>